Reconfigured sphinx to render C++ documentation (breathe, exhale)

--- a/extrafiles/sphinx-style/_templates/layout.html
+++ b/extrafiles/sphinx-style/_templates/layout.html
@@ -19,12 +19,38 @@
   {% include "navbar.html" %}
 {% endmacro %}
 
+{% if theme_bootstrap_version == "3" %}
+  {%- macro bsidebar_nkt() %}
+      {%- if render_sidebar %}
+      <div class="{{ bs_span_prefix }}4">
+        <div id="sidebar" class="bs-sidenav" role="complementary">
+          {%- for sidebartemplate in sidebars %}
+            {%- include sidebartemplate %}
+          {%- endfor %}
+        </div>
+      </div>
+      {%- endif %}
+  {%- endmacro %}
+{% else %}
+  {%- macro bsidebar_nkt() %}
+      {%- if render_sidebar %}
+      <div class="{{ bs_span_prefix }}4">
+        <div id="sidebar" class="bs-sidenav well" data-spy="affix">
+          {%- for sidebartemplate in sidebars %}
+            {%- include sidebartemplate %}
+          {%- endfor %}
+        </div>
+      </div>
+      {%- endif %}
+  {%- endmacro %}
+{% endif %}
+
 {%- block content %}
 {{ customNavBar() }}
 <div class="container">
   <div class="row">
-    {%- block sidebar1 %}{{ bsidebar() }}{% endblock %}
-    <div class="{{ bs_span_prefix }}{{ bs_content_width }} content">
+    {%- block sidebar1 %}{{ bsidebar_nkt() }}{% endblock %}
+    <div class="col-md-8 content">
       {% block body %}{% endblock %}
     </div>
     {% block sidebar2 %} {# possible location for sidebar #} {% endblock %}
