Added particles to navbar

--- a/extrafiles/sphinx-style/_templates/navbar.html
+++ b/extrafiles/sphinx-style/_templates/navbar.html
@@ -1,3 +1,4 @@
+   <div id="fancy-particles-small"></div>
   <div id="navbar" class="{{ theme_navbar_class }} navbar-default {% if theme_navbar_fixed_top|tobool -%} navbar-fixed-top{%- endif -%}">
     <div class="container">
       <div class="navbar-header">
